--- a/doc/require/frontpage.tex
+++ b/doc/require/frontpage.tex
@@ -31,6 +31,7 @@
 {\bfseries 
 Author:\\
 Brian Stengaard [s071497] s071497@student.dtu.dk\\
+Henrik Mygind [s062406] s062406@student.dtu.dk\\
 [3ex]}
 \@university\\
 \@department\\
