--- a/doc/tex/report-content.tex
+++ b/doc/tex/report-content.tex
@@ -2,15 +2,15 @@
 \input{require/commands.tex}
 
 %remember to modify title-page with authors. Not perfect.
-\title{Report Name} 
-\subtitle{Subtitle}
-\supervisor{Some Guy}
-\term{Spring/Fall YEAR}
-\dtucourse{Course Name}{number}
+\title{Automated Planning} 
+\subtitle{Solving Sokoban}
+\supervisor{Thomas Bolander}
+\term{Spring 2009}
+\dtucourse{Artificial Intelligence}{02285}
 \university{Technical University of Denmark}
 \department{Department of Informatics and Mathematical Modelling}
-\author{Brian Stengaard}
-\date{date}
+\author{Brian Stengaard and Henrik Mygind}
+\date{2009-05-20}
 
 
 
