doc and something else

--- a/doc/require/bibtex.bib
+++ b/doc/require/bibtex.bib
@@ -1,5 +1,17 @@
 
 
+
+
+@Article{cgw:sokoban,
+  author = 	 {Roy Wagner},
+  title = 	 {Puzzling Encounters - Two Titles from Spectrum Holybyte's International Series},
+  journal = 	 {Computer Gaming World},
+  year = 	 1988,
+  number =	 47,
+  pages =	 {42-43},
+  month =	 {May},
+  note =	 {Surveyed on 2009-05-12. From \url{http://cgw.vintagegaming.org/galleries/issues/47.pdf}}}
+
 @INCOLLECTION{async-bog,
     author       = "J. Spars{\o}",
     title        = "Asynchronous circuit design - A tutorial",
