--- a/doc/tex/intro.tex
+++ b/doc/tex/intro.tex
@@ -39,7 +39,34 @@ level original game.
     \url{http://en.wikipedia.org/wiki/Sokoban}.}
   \label{fig:soko-org-screen}
 \end{figure}
+
 \section{Problem Formulation}
+
+The assignment leaves us rather free to chose our focus, but there are
+some minimum requirements we must meet. In this list of tasks we chose
+some of them to focus on and others to address more lightly.
+
+\section{Primary Focus of the Project}
+We chose to put our primary focus in the project and the report on
+implementating a solver for arbitrary Sokoban floor plans.
+
+This means that large parts of this report will deal with the design
+and implemenation of such a solver. This also implies that we to a
+lesser degree address the more academic studies of complexity in the
+game.
+
+We will implement at least 3 different techniques for solving the
+Sokoban challenges:
+\begin{itemize}
+\item Simple breadth first progression planner. %done
+\item The same as above, only using a general heuristic.
+\item The same as above, replacing the general heuristic with one we design ourselves.
+\end{itemize}
+
+
+
+\section{Scope Limitation}
+
 
 
 
