--- a/doc/require/theme.tex
+++ b/doc/require/theme.tex
@@ -1,4 +1,7 @@
 % \mainmatter sets secnumdepth to this 
+
+\newcommand\action[1]{\textsf{#1}}
+
 \maxsecnumdepth{subsubsection}
 
 \setcounter{tocdepth}{1}
