--- a/doc/require/bibtex.bib
+++ b/doc/require/bibtex.bib
@@ -1,3 +1,13 @@
+
+@INPROCEEDINGS{Junghanns99domain-dependentsingle-agent,
+  author =	 {Andreas Junghanns and Jonathan Schaeffer},
+  title =	 {Domain-Dependent Single-Agent Search Enhancements},
+  booktitle =	 {In IJCAI-99},
+  year =	 {1999},
+  pages =	 {570--575},
+  publisher =	 {Morgan Kaufmann}
+}
+
 @Book{Russell2003,
   AUTHOR =	 {Stuart Russell and Peter Norvig},
   TITLE =	 {Artificial Intelligence: A Modern Approach},
