--- a/doc/tex/heuristics.tex
+++ b/doc/tex/heuristics.tex
@@ -1,4 +1,5 @@
 \chapter{Defining Heuristics for Sokoban}
+\label{cha:heuristics}
 
 \section{Introduction}
 In this chapter we examine which general heuristics are convenient to
@@ -26,4 +27,17 @@ original problem in order for this exercise to make any sense.
 
 Removing all preconditions in Sokoban 
 
+SubGoalIndependence
+
+HeuristicsCombiner
+HeuristicsAdder
+HeuristicsMultiplier
+
+
 \subsection{}
+
+Box4x4Heuristic
+BoxOnGoalHeuristic
+CornerHeuristic
+ShortestPathHeuristic
+
