--- a/doc/tex/intro.tex
+++ b/doc/tex/intro.tex
@@ -97,6 +97,6 @@ First we develop a STRIPS formulation of Sokoban (Chapter
 with a breadth-first solver. In Chapter \ref{cha:heuristics} we define
 the heuristics needed to guide the search. We then continue to analyse
 our findings in Chapter \ref{cha:analysis}. Before finally we summing
-the results in Chapter \ref{ref:conclusion}.
+the results in Chapter \ref{cha:conclusion}.
 
 
