--- a/doc/tex/analysis.tex
+++ b/doc/tex/analysis.tex
@@ -1,2 +1,8 @@
 \chapter{Results and Analysis}
 \label{cha:analysis}
+
+\section{Introduction}
+We now define 
+
+\section{Discussion}
+Difference between levels that are easy for humans and computers.
