--- a/doc/tex/heuristics.tex
+++ b/doc/tex/heuristics.tex
@@ -33,11 +33,13 @@ HeuristicsCombiner
 HeuristicsAdder
 HeuristicsMultiplier
 
+BoxOnGoalHeuristic
 
-\subsection{}
+ShortestPathHeuristic
+
+\subsection{Pattern Recognition}
 
 Box4x4Heuristic
-BoxOnGoalHeuristic
 CornerHeuristic
-ShortestPathHeuristic
+
 
