adding stuff about heuristics

--- a/doc/require/commands.tex
+++ b/doc/require/commands.tex
@@ -18,6 +18,8 @@ ak_{#1}
 $ak_{#1}$
 \fi}
 
+\newcommand{\astar}{$\mathcal{A}^{\ast}$}
+
 \newcommand{\rise}{$\uparrow$}
 \newcommand{\fall}{$\downarrow$}
 
