--- a/doc/tex/analysis.tex
+++ b/doc/tex/analysis.tex
@@ -2,7 +2,19 @@
 \label{cha:analysis}
 
 \section{Introduction}
-We now define 
+In this chapter we gather the results of the including the different
+heuristics and algorithms in the solver. We go on to analyse these
+results in order to determine the best combination of heuristic and
+algorithm.
 
-\section{Discussion}
-Difference between levels that are easy for humans and computers.
+\section{Experimental Environment}
+Here we define the set of levels on which we are going to compare the
+heuristics and solvers. 
+
+\subsection{Levelset}
+
+\subsection{Variables}
+Solution length, total no of states visited, total no of states seen, run
+time, branching factor, 
+
+
