nu med flere figurer og en smule mere om heuristics

--- a/doc/require/preamble.tex
+++ b/doc/require/preamble.tex
@@ -7,8 +7,8 @@
 \usepackage{graphicx} 
 \usepackage{rotating}
 %\usepackage{epic,bez123}
-\usepackage{floatflt}% package for floatingfigure environment
-\usepackage{wrapfig}% package for wrapfigure environment
+%\usepackage{floatflt}% package for floatingfigure environment
+%\usepackage{wrapfig}% package for wrapfigure environment
 \usepackage{url} 
 \usepackage{geometry} 
 \usepackage{booktabs} 
