--- a/doc/tex/heuristics.tex
+++ b/doc/tex/heuristics.tex
@@ -24,7 +24,7 @@ the developed heuristic \emph{must} be simpler than solving the
 original problem in order for this exercise to make any sense.
 
 \subsubsection{Removing Preconditions}
-
+\todo{Write this}
 Removing all preconditions in Sokoban 
 
 \subsubsection{SubGoalIndependence}
@@ -113,13 +113,4 @@ In steps the algorithm does the following. The steps is also illustrated in figu
 	\caption{CornerHeuristic in steps}
 	\label{fig:cornerheuristic}
 \end{figure}
-
-
-
-
-
-
-
-
-
 
